--- a/rest-service/rest-service/pom.xml
+++ b/rest-service/rest-service/pom.xml
@@ -57,6 +57,10 @@
             <artifactId>validation-api</artifactId>
             <version>1.0.0.GA</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-hateoas</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
