--- a/rest-service/rest-service/src/main/resources/application.yml
+++ b/rest-service/rest-service/src/main/resources/application.yml
@@ -8,3 +8,24 @@ logging:
 spring:
   messages:
     basename: message
+
+  h2:
+    console:
+      enabled: true
+
+  datasource:
+    url: jdbc:h2:mem:testdb
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
+
+  jpa:
+    show-sql: true
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        use_sql: true
+        format_sql: true
+    defer-datasource-initialization: true
