add jwt token file

--- a/rest-service/user-service/src/main/resources/application.yml
+++ b/rest-service/user-service/src/main/resources/application.yml
@@ -13,3 +13,8 @@ spring:
     url: jdbc:h2:mem:testdb
     username: sa
     password:
+
+
+token:
+  expiration_time: 86400000
+  secret: user_token
